--- a/style.css
+++ b/style.css
@@ -11,8 +11,13 @@ body {
     position: relative;
 }
 
-.img {
-    max-width: 95%;
+.logo {
+    background: none;
+}
+
+.logo:hover {
+    background: #4682e2;
+
 }
 
 .all {
@@ -31,6 +36,7 @@ body {
     top: 25%;
     left: 25%;
     display: none;
+    box-sizing: border-box;
 }
 
 .log {
@@ -48,6 +54,8 @@ body {
     color: #808080;
     justify-content: center;
     text-decoration: none;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .Text3 {
@@ -77,6 +85,8 @@ body {
     color: #808080;
     justify-content: center;
     text-decoration: none;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .baton2 {
@@ -99,6 +109,11 @@ body {
 
 }
 
+.baton2:hover {
+    background: #90b6f4;
+    color: #EA5D21;
+}
+
 .heder {
     background: #213B7E;
     display: flex;
@@ -110,7 +125,7 @@ body {
     padding-right: calc(50% - 1268px / 2);
 }
 
-.baton {
+.button {
     background: #EA5D21;
     width: 153px;
     height: 50px;
@@ -123,6 +138,11 @@ body {
     line-height: 21px;
     color: #FFFFFF;
     text-decoration: none;
+}
+
+.button:hover {
+    background: #90b6f4;
+    color: #EA5D21;
 }
 
 .visible {
@@ -172,110 +192,7 @@ body {
     font-size: 30px;
     line-height: 35px;
     color: #000000;
-    -webkit-animation: taitl 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) ;
-	        animation: taitl 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) ;
-}
-
-@-webkit-keyframes @-webkit-keyframes taitl {
-
-    0%,
-    100% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-    }
-
-    10%,
-    30%,
-    50%,
-    70% {
-        -webkit-transform: translateY(-8px);
-        transform: translateY(-8px);
-    }
-
-    20%,
-    40%,
-    60% {
-        -webkit-transform: translateY(8px);
-        transform: translateY(8px);
-    }
-
-    80% {
-        -webkit-transform: translateY(6.4px);
-        transform: translateY(6.4px);
-    }
-
-    90% {
-        -webkit-transform: translateY(-6.4px);
-        transform: translateY(-6.4px);
-    }
-}
-
-@keyframes taitl {
-
-    0%,
-    100% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-    }
-
-    10%,
-    30%,
-    50%,
-    70% {
-        -webkit-transform: translateY(-8px);
-        transform: translateY(-8px);
-    }
-
-    20%,
-    40%,
-    60% {
-        -webkit-transform: translateY(8px);
-        transform: translateY(8px);
-    }
-
-    80% {
-        -webkit-transform: translateY(6.4px);
-        transform: translateY(6.4px);
-    }
-
-    90% {
-        -webkit-transform: translateY(-6.4px);
-        transform: translateY(-6.4px);
-    }
-}
-
-    {
-
-    0%,
-    100% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-    }
-
-    10%,
-    30%,
-    50%,
-    70% {
-        -webkit-transform: translateY(-8px);
-        transform: translateY(-8px);
-    }
-
-    20%,
-    40%,
-    60% {
-        -webkit-transform: translateY(8px);
-        transform: translateY(8px);
-    }
-
-    80% {
-        -webkit-transform: translateY(6.4px);
-        transform: translateY(6.4px);
-    }
-
-    90% {
-        -webkit-transform: translateY(-6.4px);
-        transform: translateY(-6.4px);
-    }
+    animation: taitl 1s cubic-bezier(0.455, 0.030, 0.515, 0.955);
 }
 
 @keyframes taitl {
@@ -399,8 +316,14 @@ body {
     color: rgba(255, 255, 255, 0.5);
 }
 
+.text_end:hover {
+    background: #90b6f4;
+    color: #FFFFFF;
+}
+
 .img {
     margin-top: 25px;
+    max-width: 95%;
 }
 
 /* students */
@@ -418,7 +341,43 @@ body {
     line-height: 36px;
     color: #000000;
     margin-top: 37px;
+    animation: sabtitl 1s cubic-bezier(0.455, 0.030, 0.515, 0.955);
 }
+
+@keyframes sabtitl {
+
+    0%,
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+
+    10%,
+    30%,
+    50%,
+    70% {
+        -webkit-transform: translateY(-8px);
+        transform: translateY(-8px);
+    }
+
+    20%,
+    40%,
+    60% {
+        -webkit-transform: translateY(8px);
+        transform: translateY(8px);
+    }
+
+    80% {
+        -webkit-transform: translateY(6.4px);
+        transform: translateY(6.4px);
+    }
+
+    90% {
+        -webkit-transform: translateY(-6.4px);
+        transform: translateY(-6.4px);
+    }
+}
+
 
 .students {
     margin-top: 24px;
@@ -456,6 +415,11 @@ body {
     color: #000000;
     text-align: center;
     margin-top: 8px;
+    height: 50px;
+}
+
+.namestudets:hover {
+    background: #99aad7;
 }
 
 /* about */
@@ -478,6 +442,12 @@ body {
 .video {
     margin-top: 15px;
     padding: 10px;
+    cursor: pointer;
+    border: 2px solid #FFFFFF;
+}
+
+.video:hover {
+    border: 2px solid #4e83de;
 }
 
 /* contacts */
@@ -495,6 +465,41 @@ body {
     margin-top: 33px;
     padding-left: calc(50% - 820px / 2);
     padding-right: calc(50% - 820px / 2);
+    animation: contacts_taitl 1s cubic-bezier(0.455, 0.030, 0.515, 0.955);
+}
+
+@keyframes contacts_taitl {
+
+    0%,
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+
+    10%,
+    30%,
+    50%,
+    70% {
+        -webkit-transform: translateY(-8px);
+        transform: translateY(-8px);
+    }
+
+    20%,
+    40%,
+    60% {
+        -webkit-transform: translateY(8px);
+        transform: translateY(8px);
+    }
+
+    80% {
+        -webkit-transform: translateY(6.4px);
+        transform: translateY(6.4px);
+    }
+
+    90% {
+        -webkit-transform: translateY(-6.4px);
+        transform: translateY(-6.4px);
+    }
 }
 
 .maps {
