--- a/style.css
+++ b/style.css
@@ -41,18 +41,19 @@ body {
     animation: shadow-drop-br 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
-  @keyframes shadow-drop-br {
+@keyframes shadow-drop-br {
     0% {
-      -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-              box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+        -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
     }
+
     100% {
-      -webkit-box-shadow: 12px 12px 20px -12px rgba(0, 0, 0, 0.35);
-              box-shadow: 12px 12px 20px -12px rgba(0, 0, 0, 0.35);
+        -webkit-box-shadow: 12px 12px 20px -12px rgba(0, 0, 0, 0.35);
+        box-shadow: 12px 12px 20px -12px rgba(0, 0, 0, 0.35);
     }
-  }
-  
-  
+}
+
+
 .log {
     width: 444px;
     height: 55px;
@@ -435,7 +436,10 @@ body {
 .namestudets:hover {
     background: #99aad7;
 }
-
+.photoSt {
+    width: 200px;
+    height: 270px;
+}
 
 /* about */
 
@@ -521,6 +525,8 @@ body {
 
 .maps {
     margin-top: 25px;
+    width: 100%;
+    height: 370px;
 }
 
 .contacts_text {
@@ -558,11 +564,11 @@ body {
     grid-template-areas:
         "фото Имя"
         "мои-контакты Достижения";
-        margin: 20px 20px 20px 20px;
-        font-family: 'Roboto', sans-serif;  
-        text-align: center;
-        padding-left: calc(50% - 820px / 2);
-        padding-right: calc(50% - 820px / 2);
+    margin: 20px 20px 20px 20px;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    padding-left: calc(50% - 820px / 2);
+    padding-right: calc(50% - 820px / 2);
 }
 
 .MyСontacts {
@@ -570,14 +576,14 @@ body {
     border: 2px #213B7E;
     border-radius: 20px;
     background-color: #4682e2;
-    
+
 }
 
 .Progress {
     grid-area: Достижения;
     border: 2px #213B7E;
     border-radius: 20px;
-    background-color: #4682e2;  
+    background-color: #4682e2;
 
 }
 
@@ -589,6 +595,8 @@ body {
     display: flex;
     justify-content: space-around;
     flex-wrap: nowrap;
+    width: 100px;
+    height: 135px; 
 }
 
 .name {
